text align fix

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,3 +1,6 @@
+h3 {
+  text-align: center;
+}
 
 .home-wrapper {
   background-color: #f7f5ee;
@@ -7,7 +10,6 @@
 .container {
   background-color: #fff;
   box-shadow: 0 0 15px rgba(24, 237, 243, 0.64);
-  text-align: center;
 }
 
 .item {
